[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mypackage"
version = "0.1.0"
description = "My first package"
license = {text = "licence.txt"}

dependencies = [
    "numpy>1.0.0",
    "scipy"
]


[project.optional-dependencies]
dev =[
    "pytest",
    "pytest-cov"
]
else = [
    "epics"
]